Fix scroll reveal animation on mobile (once again)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,6 @@
 @import '@fontsource/instrument-serif/latin-400-italic.css';
 html, body {
   margin: 0;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
